feat: add log in success msg

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,8 +4,8 @@
   </div>
   <form action="/show" method="POST">
     <div class="form-group col-12" >
-      <label for="mailaddress">Email address</label>
-      <input name="mailaddress" type="email" class="form-control" id="mailaddress" aria-describedby="emailHelp" placeholder="請輸入Email ..." style="width: 300px">
+      <label for="email">Email address</label>
+      <input name="email" type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="請輸入Email ..." style="width: 300px">
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group col-12">
