feat: add cookie-parser and express-session to stay login status

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-dark bg-secondary">
-    <a href="#" class="navbar-brand">Log-in System</a>
+    <a href="/" class="navbar-brand">Log-in System</a>
   </nav>
 
   <main>
