--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -6,7 +6,7 @@
 </div>
 {{/if}}
 <div class="container">
-  <form action="/">
-    <button type="submit" class="btn btn-success">Back</button>
+  <form action="/logout">
+    <button type="submit" class="btn btn-success">Log out</button>
   </form>
 </div>
